[package]
name = "rust-kuberentes"
version = "0.1.0"
authors = ["sachin maharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.38.0"
kube-derive = "0.38.0"
kube-runtime = "0.38.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }

futures = "0.3.5"
env_logger = "0.7.1"
tokio = { version = "0.2.21", features = ["macros", "tcp", "dns", "io-util"] } 
anyhow = "1.0"

log = "0.4.8"




